test/spec_vectors/local_get/fail/module_12.wat
(module (func $large-local (local i32 i64) (local.get 14324343) drop))